--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,3 +3,8 @@ michael:
   name: Michael Example
   email: michael@example.com
   password_digest: <%= User.digest('password') %> 
+
+archer:
+  name: Sterling Archer
+  email: duchess@example.like_the_show
+  password_digest: <%= User.digest('password') %>
